--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Nathan Speller
+subtitle: Co-founder at InsuranceZebra.
+author: Nathan Speller
 simple_search: http://google.com/search
 description:
 
