fake posts and lots of styles (incomplete)

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Nathan Speller
+title: Nate Speller
 subtitle: Co-founder at InsuranceZebra.
 author: Nathan Speller
 simple_search: http://google.com/search
