really done with these first 3 posts

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://ogn8.com
 title: Nate Speller
-subtitle: Co-founder at InsuranceZebra.
+subtitle: is talking to himself again.
 author: Nathan Speller
 simple_search: http://google.com/search
 description:
