styled to remove gradient and add top paragraph

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://nathanspeller.com
 title: Nathan Speller
-subtitle: is talking to himself again.
+subtitle: "Thoughts on entrepreneurship, design, and self-awareness in startups."
 author: Nathan Speller
 simple_search: http://google.com/search
-description: "Nathan Speller is an entrepreneur, developer and designer blogging about startups in Pittsburgh, PA"
+description: "Nathan Speller is an entrepreneur, developer and designer writing on entrepreneurship, design, and self-awareness in startups."
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
