--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://nathanspeller.github.com
+url: http://nathanspeller.com
 title: Nathan Speller
 subtitle: "Thoughts on entrepreneurship, design, and self-awareness in startups."
 author: Nathan Speller
