--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://nathanspeller.com
 title: Nathan Speller
-subtitle: "Thoughts on entrepreneurship, design, and self-awareness in startups."
+subtitle: "Startups, design, and self-awareness. Founder at <a href=\"http://designly.com\">designly.com</a>"
 author: Nathan Speller
 simple_search: http://google.com/search
 description: "Nathan Speller is an entrepreneur, developer and designer writing on entrepreneurship, design, and self-awareness in startups."
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: ogn8
-disqus_show_comment_count: false
+# disqus_short_name: ogn8
+# disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id: UA-1407949-2
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
