removed feedburner, added mailchimp

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ description: "Nathan Speller is an entrepreneur, developer and designer writing 
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: http://feeds.feedburner.com/nathanspeller
-subscribe_email: http://feedburner.google.com/fb/a/mailverify?uri=nathanspeller
+subscribe_rss: http://nathanspeller.com/atom.xml
+subscribe_email: http://eepurl.com/vQ9LP
 # RSS feeds can list your email address if you like
 email:
 
