--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://nathanspeller.com
 title: Nathan Speller
-subtitle: "Startups, design, and self-awareness. Founder at <a href=\"http://wizzywig.io\">wizzywig.io</a>"
+subtitle: "Startups, design, and self-awareness. Founder at <a href=\"http://www.designly.com\">designly.com</a>"
 author: Nathan Speller
 simple_search: http://google.com/search
 description: "Nathan Speller is an entrepreneur, developer and designer writing on entrepreneurship, design, and self-awareness in startups."
