--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://nathanspeller.com
+url: http://nathanspeller.github.com
 title: Nathan Speller
 subtitle: "Startups, design, and self-awareness. Founder at <a href=\"http://www.designly.com\">designly.com</a>"
 author: Nathan Speller
